# auth0-firebase-fastmcp

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  idx-template.json  idx-template.nix  pyproject.toml  release-config.yml
.idx/: dev.nix  index.html
scripts/: deploy-mcp-server.sh
src/: config.py  server.py  tools.py
src/auth0/: __init__.py  authz.py  errors.py  middleware.py
